feat: add comprehensive notes on sentiment analysis techniques and code examples in Section 23

--- a/Section23/notes.ipynb
+++ b/Section23/notes.ipynb
@@ -3,7 +3,113 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# What is sentiment analysis?\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "This video introduces sentiment analysis, a technique used in NLP to determine the emotional tone of text (positive, negative, or neutral). It explains the basic definitions of each sentiment and how this analysis is useful for understanding public opinion on various topics.\n",
+    "\n",
+    "### Highlights\n",
+    "\n",
+    "- 😃 Sentiment analysis helps determine the emotional tone of text.\n",
+    "- 📈 It's useful for understanding public opinion on brands, products, and people.\n",
+    "- ➕ Positive sentiment expresses liking or enjoyment.\n",
+    "- ➖ Negative sentiment expresses negative emotions.\n",
+    "- 😐 Neutral sentiment is neither positive nor negative, like factual statements.\n",
+    "- 👩‍🏫 The following lessons will cover different methods of computing sentiment.\n",
+    "- 📝 The next lesson will focus on rule-based sentiment analysis.\n",
+    "\n",
+    "# Rule-based sentiment analysis\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "This lesson compares two rule-based sentiment analysis packages, Textblob and Vader, using four example sentences. It explains how these packages assign polarity scores to words and aggregate them to determine overall sentiment, highlighting their strengths and weaknesses in handling nuanced language.\n",
+    "\n",
+    "### Highlights\n",
+    "\n",
+    "- ⚖️ Rule-based sentiment analysis uses predefined rules to assign sentiment scores.\n",
+    "- ➕ Textblob and Vader are two popular packages for this method.\n",
+    "- 📝 The lesson analyzes four sentences with varying sentiments.\n",
+    "- 📊 Textblob provides a single polarity score between -1 and 1.\n",
+    "- 📈 Vader provides scores for positive, negative, and neutral sentiments, as well as a compound score.\n",
+    "- 🤔 Vader appears to be more sensitive to nuances in language, such as contrasting clauses.\n",
+    "- 🧪 It's recommended to test both packages on your data to determine the best fit.\n",
+    "- 🤖 Rule based sentiment analysis does not use machine learning.\n",
+    "\n",
+    "### Code Examples\n",
+    "\n",
+    "```python\n",
+    "from textblob import TextBlob\n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "\n",
+    "sentences = [\n",
+    "    \"I had a great time at the movie. It was really funny.\",\n",
+    "    \"I had a great time at the movie, but the parking was terrible.\",\n",
+    "    \"I had a great time at the movie, but the parking wasn't great.\",\n",
+    "    \"I went to see a movie.\"\n",
+    "]\n",
+    "\n",
+    "# Textblob sentiment analysis\n",
+    "print(\"Textblob:\")\n",
+    "for sentence in sentences:\n",
+    "    score = TextBlob(sentence).sentiment.polarity\n",
+    "    print(f\"Sentence: {sentence} - Score: {score}\")\n",
+    "\n",
+    "# Vader sentiment analysis\n",
+    "print(\"\\nVader:\")\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "for sentence in sentences:\n",
+    "    scores = analyzer.polarity_scores(sentence)\n",
+    "    print(f\"Sentence: {sentence} - Scores: {scores}\")\n",
+    "```\n",
+    "\n",
+    "# Pre-trained transformer models\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "This lesson introduces sentiment analysis using transformer models, a more advanced approach than rule-based methods. It explains how transformer models work at a high level and demonstrates how to use the Transformers library in Python to perform sentiment analysis, including selecting specific pre-trained models for better results.\n",
+    "\n",
+    "### Highlights\n",
+    "\n",
+    "- 🧠 Transformer models use deep learning to understand word relationships and context.\n",
+    "- 📦 The Transformers library simplifies using pre-trained transformer models for sentiment analysis.\n",
+    "- 🛠️ The `pipeline` function allows easy implementation of sentiment analysis models.\n",
+    "- 🌐 Different pre-trained models exist, each trained on specific datasets (e.g., tweets).\n",
+    "- 🎯 Choosing a model that matches the data's characteristics improves accuracy.\n",
+    "- 📊 Transformer models output sentiment labels (positive, negative) and confidence scores.\n",
+    "- 🧪 Experimenting with different models is crucial for optimal results.\n",
+    "- 📈 Transformer models can be more accurate than rule-based methods, but require more computational power.\n",
+    "\n",
+    "### Code Examples\n",
+    "\n",
+    "```python\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "# Basic sentiment analysis pipeline\n",
+    "sentiment_pipeline = pipeline(\"sentiment-analysis\")\n",
+    "\n",
+    "sentences = [\n",
+    "    \"I had a great time at the movie. It was really funny.\",\n",
+    "    \"I had a great time at the movie, but the parking was terrible.\",\n",
+    "    \"I had a great time at the movie, but the parking wasn't great.\",\n",
+    "    \"I went to see a movie.\"\n",
+    "]\n",
+    "\n",
+    "# Run sentiment analysis on sentences\n",
+    "for sentence in sentences:\n",
+    "    result = sentiment_pipeline(sentence)\n",
+    "    print(f\"Sentence: {sentence} - Result: {result}\")\n",
+    "\n",
+    "# Specific model for tweet sentiment analysis\n",
+    "specific_model = pipeline(\"sentiment-analysis\", model=\"cardiffnlp/twitter-roberta-base-sentiment\")\n",
+    "\n",
+    "# Run sentiment analysis with the specific model\n",
+    "for sentence in sentences:\n",
+    "    result = specific_model(sentence)\n",
+    "    print(f\"Sentence: {sentence} - Result: {result}\")\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
